Contents aligned correctly

--- a/behrend-lion-ambassadors/app/assets/stylesheets/application.css
+++ b/behrend-lion-ambassadors/app/assets/stylesheets/application.css
@@ -69,11 +69,14 @@ table {
 #container {
 	width:100%;
 }
+
+/*SEARCH BAR*/
 #search-container {
 	background-color:#000000;
 	height:35px;
 	width:100%;
 }
+/*END SEARCH BAR*/
 
 .divider {
 	background-color:#50545E;
@@ -81,6 +84,7 @@ table {
 	width:100%;
 }
 
+/*HEADER*/
 #header-container {
 	background-color:#262C3A;
 	height:135px;
@@ -88,8 +92,6 @@ table {
 	width:100%;
 }
 #image-container {
-	/*background-color:white;*/ /*debug*/
-
 	display:inline-block;
 	width:1150px;
 
@@ -102,60 +104,71 @@ table {
 #image-container img {
 	float:left;
 }
+/*END HEADER*/
 
+/*CONTENTS*/
 #contents-container {
 	background-color:#2C76C7;
-	height:45px;
-	/*align ul vertically used method 1 on http://phrogz.net/css/vertical-align/index.html to vertically align the ul*/
-	width:100%;
+	display: table;
+	height: 45px;
+	margin:0;
+	overflow: hidden;
+	padding:0;
+	position: absolute;
+	width: 100%;
 }
 #ul-container {
+	margin-left:10%;
+	display: table-cell;
+	margin:0;
+	padding:0;
+	#position: absolute; /*a variation of an "lte ie7" hack*/
+	#top: 50%;
+	vertical-align: middle;
+	width:100%;
+}
+.contents {
+	margin:0 auto;
+	/*margin-left:10%;*/
+	padding:0;
+	#position: relative;
+	#top: -50%;
 	width:1150px;
 }
-#ul-container .contents {
-
-}
-#ul-container .contents li {
+.contents li {
 	color:white;
-	display:inline-block;	 /*could have used inline, but inline-block looks better when shrinking page horizontally*/
-	font-family: "Georgia", Times, serif;
-	font-size:1.25em;
-	margin:0;
-	padding:12px 25px;
+	display:inline-block;
+	font-size:1.15em;
+	list-style-type: none;
+	margin:-20px 0;
+	padding:25px 25px;
+    vertical-align: middle;
 }
-#ul-container .contents li a {
-    display:block;
-    height:100%;
-    margin:0;
-    text-decoration:none;
-    width:100%;
-}
-#ul-container .contents li:hover {
+.contents li:hover {
 	background-color:#1F4E96;
 }
-#ul-container .contents li img {
+.contents img {
 	height:25px;
 	width:25px;
 }
-#ul-container .contents .img li:hover {
+#spacer {
+	display:inline;
+	margin:0 144.25px;
+}
+.img li:hover {
 	background-color:transparent;
 }
-#spacer {
-	display:inline-block;
-	width:100px;
-}
+/*END CONTENTS*/
 
 #content {
 	background-color:#CECDCD;
 	text-align:center;
 }
-
 #sitemap-footer-container {
 	background-color:#262C3A;
 	height:400px;
 	width:100%;
 }
-
 #footer-container {
 	background-color:#000000;
 	height:125px;
